# praise-go-api

./: .gitignore  README.md  pyproject.toml
praise_go/: main.py
praise_go/apis/: praise_api.py
praise_go/model/: message_model.py
praise_go/prompts/: prompts.yaml
praise_go/services/: chat_service.py
praise_go/utils/: image_manipulation.py  prompts_utils.py
src/: main.py
src/services/: chat_service.py
src/utils/: image_manipulation.py
