[tool.poetry]
name = "praise-go-api"
version = "0.1.0"
description = "Backend support for PriseGo"
authors = ["AHpx"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "praise_go" }
]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.115.5"}
pillow = "^11.0.0"
requests = "^2.32.3"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
